--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,9 +28,11 @@
     "lucide-react": "^0.522.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
