--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,10 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "setup": "ts-node src/scripts/setup.ts",
-    "seed": "ts-node --transpile-only src/scripts/seed.ts"
+    "seed": "ts-node --transpile-only src/scripts/seed.ts",
+    "seed:fix-stock-only": "ts-node --transpile-only src/scripts/seed.ts --fix-stock-only",
+    "fix-stock": "ts-node --transpile-only src/scripts/fix-stock-available-quantity.ts",
+    "fix-stockledger-indexes": "ts-node --transpile-only src/scripts/fix-stockledger-indexes.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
