--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
+    "razorpay": "^2.9.6",
     "sharp": "^0.33.1",
     "xlsx": "^0.18.5"
   },
