--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
