--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "update-admin-access": "ts-node --transpile-only src/scripts/update-admin-access.ts"
   },
   "dependencies": {
+    "@types/handlebars": "^4.0.40",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
@@ -25,6 +26,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
@@ -33,6 +35,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
+    "puppeteer": "^24.12.1",
     "razorpay": "^2.9.6",
     "sharp": "^0.33.1",
     "xlsx": "^0.18.5"
@@ -48,6 +51,7 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
+    "@types/puppeteer": "^5.4.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
