--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/xlsx": "^0.0.35",
     "decimal.js": "^10.6.0",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.522.0",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.17.46",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
