--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,12 +28,14 @@
     "@types/xlsx": "^0.0.35",
     "decimal.js": "^10.6.0",
     "file-saver": "^2.0.5",
+    "flatpickr": "^4.6.13",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.522.0",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flatpickr": "^4.0.11",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
