--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "decimal.js": "^10.6.0",
     "file-saver": "^2.0.5",
     "flatpickr": "^4.6.13",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.522.0",
