--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.1.2",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "xlsx": "^0.18.5",
