notification implemented via web socket

--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/handlebars": "^4.0.40",
+    "@types/socket.io": "^3.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
@@ -38,6 +39,7 @@
     "puppeteer": "^24.12.1",
     "razorpay": "^2.9.6",
     "sharp": "^0.33.1",
+    "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
