--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/handlebars": "^4.0.40",
+    "@types/pdfkit": "^0.17.2",
     "@types/socket.io": "^3.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -36,6 +37,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.2",
     "puppeteer": "^24.12.1",
     "razorpay": "^2.9.6",
     "sharp": "^0.33.1",
